# timy

./: .dockerignore  .gitignore  Dockerfile  ETH_timetable_20230220.ics  ETH_timetable_20230220.ics:Zone.Identifier  README.md  database.db  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.server.json  vite.config.ts  webpack.mix.js
.github/workflows/: deploy.yml
.insomnia/ApiSpec/: spc_25707576a2914cbda2e2c185f4702317.yml
.insomnia/Environment/: env_2051604d147bbfe7f5f3f7d85afb9c2563ff1df5.yml
.insomnia/Request/: req_321401a6acbb457f85dffb386af7d74c.yml  req_34bc7becc4bf42acbcbc56b9d9fa4527.yml  req_55bcc51e80194dd29243c2e0cc79f93a.yml  req_a9e97c3ce80043509e505285f507c5e4.yml  req_b77ba874229f427686ae272aa134939f.yml  req_f2b06db0f4364efda6218ffe447ccd48.yml
.insomnia/UnitTest/: ut_37360f58f3f744478384cf3bc3526174.yml  ut_4db13086b8e14313830b7dd3d5ba667f.yml  ut_68d5c3cc172d4d86918d97f3feebf615.yml  (+2 more)
@types/: ValidationErrors.d.ts  models.d.ts
backend/: Cargo.toml
backend/src/: cli.rs  main.rs
backend/src/server/: mod.rs
dist-server/: app.js  main.js
front/: index.html  package-lock.json  tsconfig.tsbuildinfo
frontend/: .prettierignore  package.json  vite.config.ts
models/: timeEntry.ts
prisma/: database.db  database.db-journal  schema.prisma  seed.cjs  seed.js  seed.ts
public/: browserconfig.xml  site.webmanifest
server/: app.ts  main.ts
src/: App.vue  keys.ts  main.ts  routing.ts  server.ts  settings.ts  subjects.ts
web/: index.html
(+130 files in other folders)
